Added new points for a convex polygon.