@@ -7,18 +7,22 @@ import java.util.List;
 public class JavaDriver {
 
     public static void main(String[] args) {
-        Point pointA = new Point(230, 310);
-        Point pointB = new Point(450, 120);
-        Point pointC = new Point(570, 480);
-        Point pointD = new Point(630, 210);
+        Point pointA = new Point(50, 100);
+        Point pointB = new Point(100, 150);
+        Point pointC = new Point(150, 100);
+        Point pointD = new Point(200, 150);
+        Point pointE = new Point(250, 100);
+        Point pointF = new Point(200, 50);
 
         Edge edgeAB = new Edge(pointA, pointB);
         Edge edgeBC = new Edge(pointB, pointC);
         Edge edgeCD = new Edge(pointC, pointD);
-        Edge edgeDA = new Edge(pointD, pointA);
+        Edge edgeDE = new Edge(pointD, pointE);
+        Edge edgeEF = new Edge(pointE, pointF);
+        Edge edgeFA = new Edge(pointF, pointA);
 
-        List<Point> points = List.of(pointA, pointB, pointC, pointD);
-        List<Edge> edges = Arrays.asList(edgeAB, edgeBC, edgeCD, edgeDA);
+        List<Point> points = List.of(pointA, pointB, pointC, pointD, pointE, pointF);
+        List<Edge> edges = Arrays.asList(edgeAB, edgeBC, edgeCD, edgeDE, edgeEF, edgeFA);
         Polygon polygon = new Polygon(points, edges);
 
         DrawPolygon drawPolygon = new DrawPolygon(polygon);
